Added some more lines to check if the function works well

--- a/EX_6_Tatiana_detailed_draft.ipynb
+++ b/EX_6_Tatiana_detailed_draft.ipynb
@@ -1879,6 +1879,89 @@
    "source": [
     "result_processed.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9368 entries, 0 to 9367\n",
+      "Data columns (total 60 columns):\n",
+      " #   Column                       Non-Null Count  Dtype  \n",
+      "---  ------                       --------------  -----  \n",
+      " 0   Unnamed: 0                   9368 non-null   int64  \n",
+      " 1   encounter_id                 9368 non-null   int64  \n",
+      " 2   hospital_id                  9368 non-null   int64  \n",
+      " 3   age                          9368 non-null   float64\n",
+      " 4   bmi                          7746 non-null   float64\n",
+      " 5   elective_surgery             9368 non-null   int64  \n",
+      " 6   ethnicity                    9368 non-null   object \n",
+      " 7   gender                       9368 non-null   object \n",
+      " 8   height                       9368 non-null   float64\n",
+      " 9   hospital_admit_source        8518 non-null   object \n",
+      " 10  icu_admit_source             9347 non-null   object \n",
+      " 11  icu_id                       9368 non-null   int64  \n",
+      " 12  icu_stay_type                9368 non-null   object \n",
+      " 13  icu_type                     9368 non-null   object \n",
+      " 14  pre_icu_los_days             9368 non-null   float64\n",
+      " 15  readmission_status           9368 non-null   int64  \n",
+      " 16  weight                       9368 non-null   float64\n",
+      " 17  albumin_apache               3322 non-null   float64\n",
+      " 18  apache_2_diagnosis           9191 non-null   float64\n",
+      " 19  apache_3j_diagnosis          9319 non-null   float64\n",
+      " 20  apache_post_operative        9368 non-null   int64  \n",
+      " 21  arf_apache                   9368 non-null   int64  \n",
+      " 22  bilirubin_apache             3198 non-null   float64\n",
+      " 23  bun_apache                   6996 non-null   float64\n",
+      " 24  creatinine_apache            7121 non-null   float64\n",
+      " 25  fio2_apache                  2785 non-null   float64\n",
+      " 26  gcs_eyes_apache              9303 non-null   float64\n",
+      " 27  gcs_motor_apache             9303 non-null   float64\n",
+      " 28  gcs_unable_apache            9307 non-null   float64\n",
+      " 29  gcs_verbal_apache            9303 non-null   float64\n",
+      " 30  glucose_apache               8360 non-null   float64\n",
+      " 31  heart_rate_apache            9367 non-null   float64\n",
+      " 32  hematocrit_apache            7489 non-null   float64\n",
+      " 33  intubated_apache             9368 non-null   int64  \n",
+      " 34  map_apache                   9356 non-null   float64\n",
+      " 35  paco2_apache                 2785 non-null   float64\n",
+      " 36  paco2_for_ph_apache          2785 non-null   float64\n",
+      " 37  pao2_apache                  2785 non-null   float64\n",
+      " 38  ph_apache                    2785 non-null   float64\n",
+      " 39  resprate_apache              9335 non-null   float64\n",
+      " 40  sodium_apache                7047 non-null   float64\n",
+      " 41  temp_apache                  9283 non-null   float64\n",
+      " 42  urineoutput_apache           1387 non-null   float64\n",
+      " 43  ventilated_apache            9368 non-null   int64  \n",
+      " 44  wbc_apache                   7314 non-null   float64\n",
+      " 45  aids                         9368 non-null   int64  \n",
+      " 46  cirrhosis                    9368 non-null   int64  \n",
+      " 47  hepatic_failure              9368 non-null   int64  \n",
+      " 48  immunosuppression            9368 non-null   int64  \n",
+      " 49  leukemia                     9368 non-null   int64  \n",
+      " 50  lymphoma                     9368 non-null   int64  \n",
+      " 51  solid_tumor_with_metastasis  9368 non-null   int64  \n",
+      " 52  diabetes_mellitus            9368 non-null   int64  \n",
+      " 53  Binary                       9368 non-null   int64  \n",
+      " 54  ethnicity_African American   9368 non-null   float64\n",
+      " 55  ethnicity_Asian              9368 non-null   float64\n",
+      " 56  ethnicity_Caucasian          9368 non-null   float64\n",
+      " 57  ethnicity_Hispanic           9368 non-null   float64\n",
+      " 58  ethnicity_Native American    9368 non-null   float64\n",
+      " 59  ethnicity_Other/Unknown      9368 non-null   float64\n",
+      "dtypes: float64(35), int64(19), object(6)\n",
+      "memory usage: 4.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_processed.info()"
+   ]
   }
  ],
  "metadata": {
