--- a/EX_6_Tatiana_results.ipynb
+++ b/EX_6_Tatiana_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,16 @@
     "import seaborn as sns\n",
     "import os\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "from sklearn.metrics import roc_auc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +227,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove column, which doesn't add any value to the DataFrame\n",
+    "df = df.drop(columns=['Unnamed: 0'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,20 +271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_22824\\368855543.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_23544\\368855543.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_clean[columns_fill] = df_clean[columns_fill].apply(lambda col: col.fillna(col.mean()))\n",
-      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_22824\\368855543.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_23544\\368855543.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -300,7 +313,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>encounter_id</th>\n",
        "      <th>hospital_id</th>\n",
        "      <th>age</th>\n",
@@ -310,6 +322,7 @@
        "      <th>gender</th>\n",
        "      <th>height</th>\n",
        "      <th>hospital_admit_source</th>\n",
+       "      <th>icu_admit_source</th>\n",
        "      <th>...</th>\n",
        "      <th>lymphoma</th>\n",
        "      <th>solid_tumor_with_metastasis</th>\n",
@@ -326,7 +339,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>214826</td>\n",
        "      <td>118</td>\n",
        "      <td>68.0</td>\n",
@@ -335,6 +347,7 @@
        "      <td>Caucasian</td>\n",
        "      <td>M</td>\n",
        "      <td>180.3</td>\n",
+       "      <td>Floor</td>\n",
        "      <td>Floor</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -350,7 +363,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>246060</td>\n",
        "      <td>81</td>\n",
        "      <td>77.0</td>\n",
@@ -359,6 +371,7 @@
        "      <td>Caucasian</td>\n",
        "      <td>F</td>\n",
        "      <td>160.0</td>\n",
+       "      <td>Floor</td>\n",
        "      <td>Floor</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -374,7 +387,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>276985</td>\n",
        "      <td>118</td>\n",
        "      <td>25.0</td>\n",
@@ -384,6 +396,7 @@
        "      <td>F</td>\n",
        "      <td>172.7</td>\n",
        "      <td>Emergency Department</td>\n",
+       "      <td>Accident &amp; Emergency</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -398,7 +411,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>262220</td>\n",
        "      <td>118</td>\n",
        "      <td>81.0</td>\n",
@@ -408,6 +420,7 @@
        "      <td>F</td>\n",
        "      <td>165.1</td>\n",
        "      <td>Operating Room</td>\n",
+       "      <td>Operating Room / Recovery</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -422,7 +435,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>201746</td>\n",
        "      <td>33</td>\n",
        "      <td>19.0</td>\n",
@@ -432,6 +444,7 @@
        "      <td>M</td>\n",
        "      <td>188.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Accident &amp; Emergency</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -446,30 +459,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 60 columns</p>\n",
+       "<p>5 rows × 59 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  encounter_id  hospital_id   age        bmi  elective_surgery  \\\n",
-       "0           0        214826          118  68.0  22.732803                 0   \n",
-       "1           1        246060           81  77.0  27.421875                 0   \n",
-       "2           2        276985          118  25.0  31.952749                 0   \n",
-       "3           3        262220          118  81.0  22.635548                 1   \n",
-       "4           4        201746           33  19.0        NaN                 0   \n",
+       "   encounter_id  hospital_id   age        bmi  elective_surgery  ethnicity  \\\n",
+       "0        214826          118  68.0  22.732803                 0  Caucasian   \n",
+       "1        246060           81  77.0  27.421875                 0  Caucasian   \n",
+       "2        276985          118  25.0  31.952749                 0  Caucasian   \n",
+       "3        262220          118  81.0  22.635548                 1  Caucasian   \n",
+       "4        201746           33  19.0        NaN                 0  Caucasian   \n",
        "\n",
-       "   ethnicity gender  height hospital_admit_source  ... lymphoma  \\\n",
-       "0  Caucasian      M   180.3                 Floor  ...        0   \n",
-       "1  Caucasian      F   160.0                 Floor  ...        0   \n",
-       "2  Caucasian      F   172.7  Emergency Department  ...        0   \n",
-       "3  Caucasian      F   165.1        Operating Room  ...        0   \n",
-       "4  Caucasian      M   188.0                   NaN  ...        0   \n",
+       "  gender  height hospital_admit_source           icu_admit_source  ...  \\\n",
+       "0      M   180.3                 Floor                      Floor  ...   \n",
+       "1      F   160.0                 Floor                      Floor  ...   \n",
+       "2      F   172.7  Emergency Department       Accident & Emergency  ...   \n",
+       "3      F   165.1        Operating Room  Operating Room / Recovery  ...   \n",
+       "4      M   188.0                   NaN       Accident & Emergency  ...   \n",
        "\n",
-       "   solid_tumor_with_metastasis diabetes_mellitus Binary  \\\n",
-       "0                            0                 1      1   \n",
-       "1                            0                 1      0   \n",
-       "2                            0                 0      0   \n",
-       "3                            0                 0      0   \n",
-       "4                            0                 0      1   \n",
+       "   lymphoma solid_tumor_with_metastasis diabetes_mellitus  Binary  \\\n",
+       "0         0                           0                 1       1   \n",
+       "1         0                           0                 1       0   \n",
+       "2         0                           0                 0       0   \n",
+       "3         0                           0                 0       0   \n",
+       "4         0                           0                 0       1   \n",
        "\n",
        "   ethnicity_African American  ethnicity_Asian  ethnicity_Caucasian  \\\n",
        "0                         0.0              0.0                  1.0   \n",
@@ -485,10 +498,10 @@
        "3                 0.0                        0.0                      0.0  \n",
        "4                 0.0                        0.0                      0.0  \n",
        "\n",
-       "[5 rows x 60 columns]"
+       "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,29 +512,101 @@
     "columns_fill = ['height', 'weight']\n",
     "columns_hot = ['ethnicity']\n",
     "columns_binary = 'gender'\n",
-    "result_processed = process_data(df, columns_drop, columns_fill, columns_hot, columns_binary)\n",
-    "result_processed.head()"
+    "df_processed = process_data(df, columns_drop, columns_fill, columns_hot, columns_binary)\n",
+    "df_processed.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# b) Split the data between train and test.\n",
     "# Extract the feature data (X) and the target variable (y) from your DataFrame\n",
-    "X = df.drop('diabetes_mellitus', axis=1)  # Replace 'target_column_name' with the name of your target variable\n",
-    "y = df['diabetes_mellitus']  # Replace 'target_column_name' with the name of your target variable"
+    "X = df_processed.drop('diabetes_mellitus', axis=1)  \n",
+    "y = df_processed['diabetes_mellitus']  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# b) Split the data between train and test.\n",
+    "# Extract the feature data (X) and the target variable (y) from your DataFrame\n",
+    "X = df_processed.drop('diabetes_mellitus', axis=1)  \n",
+    "y = df_processed['diabetes_mellitus']  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# g) Train the model\n",
+    "\n",
+    "# Step 1: Define the features and target\n",
+    "features = ['age', 'height', 'weight', 'aids', 'cirrhosis', 'hepatic_failure',\n",
+    "            'immunosuppression', 'leukemia', 'lymphoma', 'solid_tumor_with_metastasis']\n",
+    "target = ['diabetes_mellitus']  \n",
+    "X_train = X_train[features] \n",
+    "X_test = X_test[features]\n",
+    "\n",
+    "# Step 2: Train the model\n",
+    "# For Logistic Regression:\n",
+    "model = LogisticRegression()\n",
+    "# For Random Forest Classifier:\n",
+    "# model = RandomForestClassifier()\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Step 3: Make predictions using predict_proba\n",
+    "train_predictions = model.predict_proba(X_train)[:, 1]\n",
+    "test_predictions = model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Step 4: Add the predictions as new columns in the train and test DataFrames\n",
+    "X_train['predictions'] = train_predictions\n",
+    "X_test['predictions'] = test_predictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train ROC AUC: 0.6703545314832863\n",
+      "Test ROC AUC: 0.6689398850455878\n"
+     ]
+    }
+   ],
+   "source": [
+    "# i) Compute the train and test roc_auc metric\n",
+    "\n",
+    "# Compute ROC AUC for the training set\n",
+    "train_roc_auc = roc_auc_score(y_train, train_predictions)\n",
+    "\n",
+    "# Compute ROC AUC for the test set\n",
+    "test_roc_auc = roc_auc_score(y_test, test_predictions)\n",
+    "\n",
+    "print(\"Train ROC AUC:\", train_roc_auc)\n",
+    "print(\"Test ROC AUC:\", test_roc_auc)\n"
    ]
   }
  ],
