Rearranged the cells

--- a/EX_6_Tatiana_results.ipynb
+++ b/EX_6_Tatiana_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,20 +271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_23544\\368855543.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_9348\\368855543.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_clean[columns_fill] = df_clean[columns_fill].apply(lambda col: col.fillna(col.mean()))\n",
-      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_23544\\368855543.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_9348\\368855543.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -501,7 +501,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,41 +518,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# b) Split the data between train and test.\n",
     "# Extract the feature data (X) and the target variable (y) from your DataFrame\n",
     "X = df_processed.drop('diabetes_mellitus', axis=1)  \n",
-    "y = df_processed['diabetes_mellitus']  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# b) Split the data between train and test.\n",
-    "# Extract the feature data (X) and the target variable (y) from your DataFrame\n",
-    "X = df_processed.drop('diabetes_mellitus', axis=1)  \n",
-    "y = df_processed['diabetes_mellitus']  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y = df_processed['diabetes_mellitus']  \n",
     "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
