Was trying to activarte library, you can delete all the code,

--- a/HW3/notebook/test_notebook.ipynb
+++ b/HW3/notebook/test_notebook.ipynb
@@ -2,12 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f612e2ec-22e7-46f5-9a12-544d144ac4d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'HW3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\notebook\\test_notebook.ipynb Cell 1\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# from bse_demo_library.features.compute_death_rate import compute_death_rate\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeatures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprocess_data\u001b[39;00m \u001b[39mimport\u001b[39;00m process_data\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'HW3'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# from bse_demo_library.features.compute_death_rate import compute_death_rate\n",
+    "from HW3.features.process_data import process_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "df6e99fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3')\n",
+    "import HW3\n",
+    "from HW3 import features\n",
+    "# from HW3.features.process_data import process_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa171e99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from bse_demo_library.features.compute_death_rate import compute_death_rate"
    ]
   },
@@ -19,6 +57,28 @@
    "outputs": [],
    "source": [
     "data = pd.read_csv('../covid.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "04ddde95",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'loaddata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\notebook\\test_notebook.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m loaddata(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mbakwe\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mDocuments\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mGitHub\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mGit extra\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mHW3\u001b[39m\u001b[39m\\\u001b[39m\u001b[39msample_diabetes_mellitus_data.csv\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'loaddata' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "loaddata(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\sample_diabetes_mellitus_data.csv')"
    ]
   },
   {
@@ -368,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
