Added comments to the cells, i was working on

--- a/HW3/notebook/test_notebook.ipynb
+++ b/HW3/notebook/test_notebook.ipynb
@@ -20,8 +20,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "# from bse_demo_library.features.compute_death_rate import compute_death_rate\n",
-    "from HW3.features.process_data import process_data"
+    "from bse_demo_library.features.compute_death_rate import compute_death_rate\n",
+    "# from HW3.features.process_data import process_data"
    ]
   },
   {
@@ -31,22 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import sys\n",
-    "sys.path.append(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3')\n",
-    "import HW3\n",
-    "from HW3 import features\n",
+    "# Comment (Tatiana) was working on this cell, can be removed - moved everything to my own branch\n",
+    "# import pandas as pd\n",
+    "# import sys\n",
+    "# sys.path.append(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3')\n",
+    "# import HW3\n",
     "# from HW3.features.process_data import process_data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa171e99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bse_demo_library.features.compute_death_rate import compute_death_rate"
    ]
   },
   {
@@ -78,7 +68,8 @@
     }
    ],
    "source": [
-    "loaddata(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\sample_diabetes_mellitus_data.csv')"
+    "# Comment (Tatiana) was working on this cell, can be removed - moved everything to my own branch\n",
+    "# loaddata(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\sample_diabetes_mellitus_data.csv')"
    ]
   },
   {
