--- a/HW3/notebook/test_notebook.ipynb
+++ b/HW3/notebook/test_notebook.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "id": "f612e2ec-22e7-46f5-9a12-544d144ac4d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'split' from 'HW3.HW3.features.data_cleaning' (C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\HW3\\features\\data_cleaning.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\notebook\\test_notebook.ipynb Cell 1\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeatures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_cleaning\u001b[39;00m \u001b[39mimport\u001b[39;00m process_data\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeatures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_cleaning\u001b[39;00m \u001b[39mimport\u001b[39;00m clean_na\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeatures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_cleaning\u001b[39;00m \u001b[39mimport\u001b[39;00m split\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'split' from 'HW3.HW3.features.data_cleaning' (C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\HW3\\features\\data_cleaning.py)"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3')\n",
@@ -13,7 +25,8 @@
     "import HW3\n",
     "from HW3.HW3.features.data_loading import loaddata\n",
     "from HW3.HW3.features.data_cleaning import process_data\n",
-    "from HW3.HW3.features.data_cleaning import clean_na\n"
+    "from HW3.HW3.features.data_cleaning import clean_na\n",
+    "from HW3.HW3.features.data_cleaning import split\n"
    ]
   },
   {
@@ -235,6 +248,16 @@
     "columns_to_check = ['age', 'gender', 'ethnicity', 'height', 'weight']\n",
     "result = missing_values_table(df_processed[columns_to_check])\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88d7a428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split(df_processed)"
    ]
   }
  ],
